<resources>
  <string name="app_name">ShoeStore</string>
  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="password">Password</string>
  <string name="user_name">User Name</string>
  <string name="enter_your_user_name">Enter your user name</string>
  <string name="enter_your_password">Enter your password</string>
  <string name="login">Login</string>
  <string name="sign_up">Sign Up</string>
  <string name="welcome_to_shoes_list_application">Welcome to shoes list application!</string>
  <string name="welcome_textview_description">In this application you will be able to browse and add best shoes in the market</string>
  <string name="check_instructions">Check Instructions</string>
  <string name="instructions">Instructions</string>
  <string name="instructions_description">If you are a member, You can view and add shoe item(s) to store list</string>
  <string name="add_new_item">Add new item</string>
  <string name="add_new_shoe">Add new shoe</string>
  <string name="shoe_name">Shoe Name</string>
  <string name="company">Company</string>
  <string name="shoe_size">Shoe Size</string>
  <string name="description">Description</string>
  <string name="save">Save</string>
  <string name="cancel">Cancel</string>
  <string name="logout">LogOut</string>
</resources>
