<?xml version="1.0" encoding="utf-8"?>
<layout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools">

  <!-- Using LinearLayout to adjust fields vertically oriented   -->
<LinearLayout
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".screens.LoginFragment"
  android:orientation="vertical">

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/user_name"
    android:paddingTop="@dimen/padding_fields"
    android:paddingStart="@dimen/padding_fields"/>

  <EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/enter_your_user_name"
    android:paddingStart="@dimen/padding_fields"/>

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/password"
    android:paddingTop="@dimen/padding_fields"
    android:paddingStart="@dimen/padding_fields"/>


  <EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/enter_your_password"
    android:paddingStart="@dimen/padding_fields"/>

  <Button
    android:id="@+id/login_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/login"
    android:paddingTop="@dimen/padding_fields"
    android:layout_gravity="center"/>


  <Button
    android:id="@+id/signup_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/sign_up"
    android:paddingTop="@dimen/padding_fields"
    android:layout_gravity="center"/>

</LinearLayout>
</layout>