<?xml version="1.0" encoding="utf-8"?>
<layout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"  >

  <data>
    <variable
      name="shoe"
      type="com.udacity.shoestore.models.Shoe" />
  </data>


  <!--  Using ConstraintLayout to have flexibility of adjusting positions of textViews and editText fields -->
  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.ShoesItemFragment"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

    <Button
      android:id="@+id/save_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="17dp"
      android:layout_marginStart="80dp"
      android:text="@string/save"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/description_edit_text" />
    <Button
      android:id="@+id/cancel_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:layout_marginStart="52dp"
      android:text="@string/cancel"
      app:layout_constraintStart_toEndOf="@+id/save_button"
      app:layout_constraintTop_toBottomOf="@+id/description_edit_text" />

    <EditText
      android:id="@+id/shoe_name_edit_text"
      android:layout_width="@dimen/edit_text_width"
      android:layout_height="wrap_content"
      android:layout_marginTop="12dp"
      android:layout_marginStart="41dp"
      android:minHeight="48dp"
      android:text="@={shoe.name}"
      app:layout_constraintStart_toEndOf="@+id/textView"
      app:layout_constraintTop_toTopOf="parent"
      tools:ignore="SpeakableTextPresentCheck" />
    <EditText
      android:id="@+id/company_edit_text"
      android:layout_width="@dimen/edit_text_width"
      android:layout_height="wrap_content"
      android:layout_marginStart="41dp"
      android:minHeight="48dp"
      android:text="@={shoe.company}"
      app:layout_constraintStart_toEndOf="@+id/textView2"
      app:layout_constraintTop_toBottomOf="@+id/shoe_name_edit_text"
      tools:ignore="SpeakableTextPresentCheck" />


    <EditText
      android:id="@+id/shoe_size_edit_text"
      android:layout_width="@dimen/edit_text_width"
      android:layout_height="wrap_content"
      android:layout_marginTop="23dp"
      android:layout_marginStart="39dp"
      android:minHeight="48dp"
      android:text="@={shoe.sizeString}"
      app:layout_constraintStart_toEndOf="@+id/textView6"
      app:layout_constraintTop_toBottomOf="@+id/company_edit_text"
      tools:ignore="SpeakableTextPresentCheck" />
    <EditText
      android:id="@+id/description_edit_text"
      android:layout_width="@dimen/edit_text_width"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:layout_marginStart="41dp"
      android:minHeight="48dp"
      android:text="@={shoe.description}"
      app:layout_constraintStart_toEndOf="@+id/textView5"
      app:layout_constraintTop_toBottomOf="@+id/shoe_size_edit_text"
      tools:ignore="SpeakableTextPresentCheck" />
    <TextView
      android:id="@+id/textView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="26dp"
      android:layout_marginStart="43dp"
      android:text="@string/shoe_name"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />
    <TextView
      android:id="@+id/textView2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="31dp"
      android:layout_marginStart="56dp"
      android:text="@string/company"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView" />
    <TextView
      android:id="@+id/textView6"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="45dp"
      android:layout_marginStart="56dp"
      android:text="@string/shoe_size"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView2" />
    <TextView
      android:id="@+id/textView5"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="45dp"
      android:layout_marginStart="44dp"
      android:text="@string/description"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView6" />

  </androidx.constraintlayout.widget.ConstraintLayout>



</layout>